# SPOT

./: Dockerfile  README.md  SPOT.ps1  SPOT.sh  lidar.csv  requirements.txt  spot.service  start_spot.sh  view-systemd-log.sh
Arduino_Python/Blink_x_times/: start.py
Arduino_Python/Blink_x_times/blink_second/: blink_second.ino
Arduino_Python/Buzzer_Times/: buzzer_send.py
Arduino_Python/Servo_Times/: servo_send.py
From Raspberry Pi/: map.py  python  servo_send.py  test-depth-camera-2.py  test-depth-camera.py
From Raspberry Pi/servo_remote/: servo_remote.ino
Sound_Testing/: README.txt  text_to_speech.py
install/: local_setup.sh  setup.sh
pi_rplidar/CircuitPython 9.x/: display_lidar_pi2.py  lidar-test-working.py
py/: algo_animation.py  blurb.py  find_objects.py  grid_to_lidar.py  lidar-test.py  lidar01.csv  lidar02.csv  lidar_output.py  main.py  main2.py  map.py  map2.py  minimax.py  old_traversal.py  right-left.py  scan_to_grid.py  scan_to_grid_2.py  servo_send.py  test-depth-camera-3.py  test-depth-camera-4.py  test-depth-camera-5.py  test-depth-camera.py  test_traversal.py  timing_data.csv  traversal.py
py/servo_remote/: servo_remote.ino
src/: lidar.csv  lidar_wrapper.py  main.py  servo_remote.ino  servo_send.py  timing_data.csv
src/SPOT/: CMakeLists.txt  package.xml
src/lib/: Cargo.toml  pyproject.toml
src/lib/docs/: docs.md
src/lib/src/: combine_scans.rs  lib.rs  point_cloud_to_scan.rs  scan_to_grid.rs  traverse_grid.rs  traverse_grid_modified.rs
src/lib/src/models/: eucledian_grid.rs  node.rs
src/utils/: servo_send.py
(+7 files in other folders)
